@@ -36,6 +36,12 @@ namespace MCForge
             {
                 case "2":
                 case "cactus": p.Blockchange += new Player.BlockchangeEventHandler(AddCactus); break;
+                case "3":
+                case "notch": p.Blockchange += new Player.BlockchangeEventHandler(AddNotchTree); break;
+                case "4":
+                case "big": p.Blockchange += new Player.BlockchangeEventHandler(AddNotchBigTree); break;
+                case "5":
+                case "pine": p.Blockchange += new Player.BlockchangeEventHandler(AddNotchPineTree); break;
                 default: p.Blockchange += new Player.BlockchangeEventHandler(AddTree); break;
             }
             Player.SendMessage(p, "Select where you wish your tree to grow");
@@ -45,6 +51,21 @@ namespace MCForge
         void AddTree(Player p, ushort x, ushort y, ushort z, byte type)
         {
             Server.MapGen.AddTree(p.level, x, y, z, new Random(), true, true, p);
+            if (!p.staticCommands) p.ClearBlockchange();
+        }
+        void AddNotchTree(Player p, ushort x, ushort y, ushort z, byte type)
+        {
+            Server.MapGen.AddNotchTree(p.level, x, y, z, new Random(), true, true, p);
+            if (!p.staticCommands) p.ClearBlockchange();
+        }
+        void AddNotchBigTree(Player p, ushort x, ushort y, ushort z, byte type)
+        {
+            Server.MapGen.AddNotchBigTree(p.level, x, y, z, new Random(), true, true, p);
+            if (!p.staticCommands) p.ClearBlockchange();
+        }
+        void AddNotchPineTree(Player p, ushort x, ushort y, ushort z, byte type)
+        {
+            Server.MapGen.AddNotchPineTree(p.level, x, y, z, new Random(), true, true, p);
             if (!p.staticCommands) p.ClearBlockchange();
         }
         void AddCactus(Player p, ushort x, ushort y, ushort z, byte type)
